--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -75,7 +75,8 @@ dependencies {
     kapt "androidx.room:room-compiler:2.5.0-alpha02"
 
     // WorkManager
-    implementation "android.arch.work:work-runtime-ktx:1.0.1"
+    //implementation "android.arch.work:work-runtime-ktx:1.0.1"
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
